# lakehouse-loader

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
ci/: clippy.sh
src/: delta.rs  delta_destination.rs  error.rs  iceberg_destination.rs  lib.rs  main.rs  pg_arrow_source.rs  pg_datetime.rs  pg_numeric.rs
tests/: basic_integration.rs
tests/postgres-init-scripts/: init-pg-data.sql
