[package]
name = "lakehouse-loader"
version = "0.1.0"
edition = "2021"

[dependencies]

arrow = "50.0.0"
arrow-buffer = "50.0.0"
arrow-schema = "50.0.0"
async-trait = "0.1"
bytes = "1.4.0"
clap = { version = "4.5", features = [ "derive" ] }
config = "0.13.3"
deltalake = "0.17.0"
env_logger = "0.11.1"
futures = "0.3"
log = "0.4"
native-tls = "0.2.11"
object_store = { version = "0.9", features = ["aws"] }
parquet = "50.0.0"
postgres = { version = "0.19.7", git = "https://github.com/splitgraph/rust-postgres", rev = "88c2c7714a4558aed6a63e2e2b140a8359568858" }
postgres-native-tls = { version = "0.5.0", git = "https://github.com/splitgraph/rust-postgres", rev = "88c2c7714a4558aed6a63e2e2b140a8359568858" }
tempfile = "3"
thiserror = "1"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "signal", "process"] }
tokio-postgres = { version = "0.7.10", git = "https://github.com/splitgraph/rust-postgres", rev = "88c2c7714a4558aed6a63e2e2b140a8359568858" }
url = "2.5.0"
uuid = "1.2.1"

[profile.release]
codegen-units = 1
lto = true
strip = true
