[package]
name = "lakehouse-loader"
version = "0.1.0"
edition = "2021"

[dependencies]

arrow = { version = "53" }
arrow-buffer = { version = "53" }
arrow-schema = { version = "53" }
async-trait = "0.1"
bytes = "1.4.0"
clap = { version = "4.5", features = [ "derive" ] }
config = "0.13.3"
deltalake = { version = "0.22" }
env_logger = "0.11.1"
fastrand = "2.2.0"
futures = "0.3"
iceberg = { git = "https://github.com/splitgraph/iceberg-rust", rev = "59e113b4650cfcd52331d3c179154a2cd7f88b6f" }
log = "0.4"
native-tls = "0.2.11"
object_store = { version = "0.11", features = ["aws"] }
parquet = { version = "53" }
postgres = { version = "0.19.7", git = "https://github.com/splitgraph/rust-postgres", rev = "88c2c7714a4558aed6a63e2e2b140a8359568858" }
postgres-native-tls = { version = "0.5.0", git = "https://github.com/splitgraph/rust-postgres", rev = "88c2c7714a4558aed6a63e2e2b140a8359568858" }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "signal", "process"] }
tokio-postgres = { version = "0.7.10", git = "https://github.com/splitgraph/rust-postgres", rev = "88c2c7714a4558aed6a63e2e2b140a8359568858" }
url = "2.5.0"
uuid = "1.2.1"

[dev-dependencies]
regex = "1.11"

[profile.release]
codegen-units = 1
lto = true
strip = true
